<resources>
    <string name="app_name">i-Parapheur</string>
    <string name="title_dossier_detail">Dossier Detail</string>
    <string name="account_new">Nouveau compte</string>
    <string name="search">Rechercher</string>
    <string name="settings">Préférences</string>
    <string name="about">À propos</string>
    <string name="media_not_mounted">Aucun stockage disponible, les documents ne seront pas visualisables.</string>
    <string name="type">Type</string>
    <string name="sous_type">Sous-Type</string>
    <string name="circuit">Circuit de validation</string>
    <string name="icon_action">icône d\'action</string>
    <string name="par">par</string>
    <string name="network_unreachable">Aucune connexion disponible</string>
    <string name="at">à</string>
    <string name="le">le</string>
    <string name="action_details">Informations du dossier</string>
    <string name="action_dossiers">dossiers</string>
    <string name="action_filtrer">Filtrer</string>
    <string name="document_selection">Sélection du document</string>
    <string name="password">Mot de passe</string>
    <string name="mandatory">Obligatoire</string>
    <string name="optional">Facultatif</string>
    <string name="drawer_open">Ouvrir le menu contextuel</string>
    <string name="drawer_close">Fermer le menu contextuel</string>
    <string name="one_dossier">1 dossier</string>
    <string name="nb_dossiers">-number- dossiers</string>
    <string name="no_dossier">Aucun dossier</string>
    <string name="action_valider">Valider</string>
    <string name="action_rejeter">Rejeter</string>
    <string name="action_viser">Viser</string>
    <string name="action_signer">Signer</string>
    <string name="action_sign_papier">Sign. papier</string>
    <string name="action_tdt">Envoyer au TdT</string>
    <string name="action_tdt_actes">Envoyer au TdT - ACTES</string>
    <string name="action_tdt_helios">Envoyer au TdT - HELIOS</string>
    <string name="action_mailsec">Envoyer par mail sécurisé</string>
    <string name="action_mail">Envoyer par mail</string>
    <string name="action_secretariat">Envoyer au Secretariat</string>
    <string name="action_remord">Reprendre</string>
    <string name="action_avis">Demander un avis complémentaire</string>
    <string name="action_transfertsign">Transférer le dossier à signer</string>
    <string name="action_ajoutsign">Ajouter une signature au dossier</string>
    <string name="action_enregistrer">Enregistrer le dossier</string>
    <string name="action_supprimer">Supprimer le dossier</string>
    <string name="action_archiver">Archiver</string>
    <string name="public_annotation">Annotation publique</string>
    <string name="private_annotation">Annotation privée</string>
    <string name="selected_certificate">Certificat sélectionné</string>
    <string name="select_certificate">Choisir un certificat</string>
    <string name="select_alias">Choisir un alias</string>
    <string name="please_select_certificate">Veuillez selectionner un certificat</string>
    <string name="justify_reject">Merci de saisir votre motif de rejet</string>
    <string name="etape_courante">Étape courante</string>
    <string name="import_title">Importer un certificat BKS</string>
    <string name="import_certificate">Importer</string>
    <string name="import_successful">Le certificat a été importé avec succès.</string>
    <string name="import_error_message_incorrect_scheme">Le scheme pour importer le certificat est incorrect.</string>
    <string name="import_error_message_cant_download_certificate">Erreur au téléchargement du certificat.</string>
    <string name="import_error_message_opening_bks_file">Le mot de passe est invalide, ou le certificat est corrompu.</string>
    <string name="import_error_message_cant_copy_certificate">Impossible de copier le certificat sur la mémoire interne.</string>
    <string name="import_error_message_incompatible_device">Cet appareil ne semble pas compatible avec les outils de cryptage utilisés.</string>
    <string name="reject_error_message_not_sent_to_server">Un problème est survenu à l\'envoi du rejet au serveur.</string>
    <string name="reject_error_message_unknown_error">Erreur inconnue lors du rejet.</string>
    <string name="reject_error_missing_annotation_error">Une annotation publique est obligatoire lors d\'un rejet.</string>
    <string name="signature_error_label">Erreur à la signature : </string>
    <string name="signature_error_message_unknown_error">Erreur inconnue lors de la signature.</string>
    <string name="signature_error_message_incompatible_device">Cet appareil ne semble pas compatible avec les outils de signature utilisés.</string>
    <string name="signature_error_message_error_opening_bks_file">Le mot de passe du certificat n\'est pas valide, ou le certificat est corrompu.</string>
    <string name="signature_error_message_wrong_password">Le mot de passe n\'est pas valide.</string>
    <string name="signature_error_message_missing_alias_or_wrong_password">Alias ou mot de passe incorrect.</string>
    <string name="signature_error_message_missing_bks_file">Le certificat BKS est introuvable.</string>
    <string name="signature_error_message_no_data_to_sign">Le contenu à signer n\'a pu être récupéré.</string>
    <string name="signature_error_message_not_sent_to_server">Un problème est survenu à l\'envoi de la signature au serveur.</string>
    <string name="signature_error_message_not_get_from_server">Un problème réseau est survenu à la récupération des données à signer.</string>
    <string name="signature_papier_transform">Transformer</string>
    <string name="signature_papier_unknown_error">Erreur inconnue lors de la transformation en signature papier.</string>
    <string name="signature_papier_confirmation_text">Voulez vous réellement changer le mode de signature de ce dossier vers le mode signature papier ?\nVous devrez imprimer et signer le document manuellement.</string>
    <string name="visa_error_message_not_sent_to_server">Un problème est survenu à l\'envoi du visa au serveur.</string>
    <string name="visa_error_message_unknown_error">Erreur inconnue lors du visa.</string>
    <string name="cannot_open_file_Path">Impossible d\'ouvrir le fichier : %1$s</string>
    <string name="cannot_open_buffer">Impossible d\'ouvrir le buffer</string>
    <string name="not_supported">Non compatible</string>
    <string name="test_ok">Connexion réussie</string>
    <string name="test_forbidden">Nom d\'utilisateur ou mot de passe incorrect</string>
    <string name="test_not_found">URL non trouvée</string>
    <string name="test_unreachable">Impossible d\'accéder au serveur</string>
    <string name="test_tenant_not_exist">La collectivité est inaccessible.</string>
    <string name="pref_account_test">Tester</string>
    <string name="no_details">Aucun détail disponible</string>
    <string name="error_reading_document">Impossible de lire le document</string>
    <string name="filter_title_hint">Texte contenu dans le titre du dossier</string>
    <string name="enregistrer_filtre">Enregistrer</string>
    <string name="filtre_nom">Nom du filtre</string>
    <string name="filtre_nom_hint">Nouveau filtre</string>
    <string name="http_error_undefined">Une erreur est intervenue lors de l\'envoi de la requête</string>
    <string name="http_error_malformed_url">URL mal formée : %s</string>
    <string name="http_error_ssl_failed">Erreur lors de la mise en place de la connexion sécurisée</string>
    <string name="http_error_explicit">%s</string>
    <string name="http_error_400">Erreur lors de l\'envoi de la requête (HTTP 400)</string>
    <string name="http_error_401">Authentification obligatoire</string>
    <string name="http_error_403">Votre compte ne permet pas d\'effectuer cette action</string>
    <string name="http_error_404">Page non trouvée (HTTP 404)</string>
    <string name="http_error_405">Méthode de requête non autorisée</string>
    <string name="http_error_503">Le service est actuellement indisponible</string>
    <string name="error_mismatch_versions">Le i-Parapheur associé au compte %s est incompatible avec cette application</string>
    <string name="error_send_request">Erreur à l\'envoi de la requête</string>
    <string name="error_parse">Erreur lors du traitement de la réponse</string>
    <string name="error_no_ticket">Impossible de se connecter, veuillez vérifier vos comptes</string>
    <string name="error_no_account">Impossible de se connecter, veuillez vérifier vos comptes</string>
    <string name="error_no_storage">Stockage inaccessible</string>
    <string name="error_file_not_found">Impossible d\'enregistrer le fichier.</string>
    <string name="error_server_not_configured">Le serveur ne permet pas l\'utilisation de l\'application mobile.</string>
    <string name="error_server_not_configured_for_tenant">Le serveur ne permet pas l\'accès à cette collectivité.</string>
    <string name="action_non_implementee">non implémenté</string>
    <string name="action_journal">Journal d\'événements</string>
    <string name="no_content">Pas de contenu</string>
    <string name="no_dossiers">Vos dossiers s\'afficheront ici</string>
    <string name="no_bureaux">Vos bureaux s\'afficheront ici</string>
    <string name="action_mode_nb_dossiers">-number- dossier(s)</string>
    <string name="error_annotation_update">Impossible d\'enregistrer l\'annotation</string>
    <string name="error_annotation_delete">Erreur lors de la suppression de l\'annotation</string>
    <string name="error_forward_parapheur_version">La version du i-Parapheur associé à ce compte est trop récente pour cette application.\nVeuillez mettre à jour votre application.</string>
    <string name="action_settings">Settings</string>
    <string name="Settings">Réglages</string>
    <string name="version">1.8 (git build)</string>
    <string name="no_media_warning">Storage media not present</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="cancel">Cancel</string>
    <string name="search_backwards">Search backwards</string>
    <string name="search_forwards">Search forwards</string>
    <string name="search_document">Search document</string>
    <string name="picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>
    <string name="outline_title">Table of Contents</string>
    <string name="enter_password">Enter password</string>
    <string name="text_not_found">Text not found</string>
    <string name="searching_">Searching&#8230;</string>
    <string name="toggle_links">Highlight and enable links</string>
    <string name="no_further_occurrences_found">No further occurrences found</string>
    <string name="select">Select</string>
    <string name="copy">Copy</string>
    <string name="strike_out">Strike-out</string>
    <string name="highlight">Highlight</string>
    <string name="underline">Underline</string>
    <string name="edit_annotations">Edit annotations</string>
    <string name="ink">Ink</string>
    <string name="save">Save</string>
    <string name="proof">Proof</string>
    <string name="separation">Separation</string>
    <string name="print">Print</string>
    <string name="dismiss">Dismiss</string>
    <string name="parent_directory">[Up one level]</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="entering_reflow_mode">Entering reflow mode</string>
    <string name="leaving_reflow_mode">Leaving reflow mode</string>
    <string name="print_failed">Print failed</string>
    <string name="select_text">Select text</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="no_text_selected">No text selected</string>
    <string name="draw_annotation">Draw annotation</string>
    <string name="nothing_to_save">Nothing to save</string>
    <string name="document_has_changes_save_them_">Document has changes. Save them?</string>
</resources>