<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:iparapheur="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/dossiers_menu_actions">
        <group android:id="@+id/dossiers_menu_main_actions">

            <item
                android:id="@+id/action_visa"
                android:title="@string/action_viser"
                iparapheur:showAsAction="ifRoom"/>

            <item
                android:id="@+id/action_signature"
                android:title="@string/action_signer"
                iparapheur:showAsAction="ifRoom"/>

            <item
                android:id="@+id/action_mailsec"
                android:title="@string/action_mailsec"
                iparapheur:showAsAction="ifRoom"/>

            <item
                android:id="@+id/action_tdt"
                android:title="@string/action_tdt"
                iparapheur:showAsAction="ifRoom"/>


            <item
                android:id="@+id/action_tdt_actes"
                android:title="@string/action_tdt_actes"
                iparapheur:showAsAction="ifRoom"/>

            <item
                android:id="@+id/action_tdt_helios"
                android:title="@string/action_tdt_helios"
                iparapheur:showAsAction="ifRoom"/>

            <item
                android:id="@+id/action_archivage"
                android:title="@string/action_archiver"
                iparapheur:showAsAction="ifRoom"/>

            <item
                android:id="@+id/action_rejet"
                android:title="@string/action_rejeter"
                iparapheur:showAsAction="ifRoom"/>
        </group>
        <group android:id="@+id/dossiers_menu_other_actions">

            <item
                android:id="@+id/action_secretariat"
                android:title="@string/action_secretariat"
                iparapheur:showAsAction="never"/>

            <item
                android:id="@+id/action_remord"
                android:title="@string/action_remord"
                iparapheur:showAsAction="never"/>

            <item
                android:id="@+id/action_avis"
                android:title="@string/action_avis"
                iparapheur:showAsAction="never"/>

            <item
                android:id="@+id/action_transfert_signature"
                android:title="@string/action_transfertsign"
                iparapheur:showAsAction="never"/>

            <item
                android:id="@+id/action_ajout_signature"
                android:title="@string/action_ajoutsign"
                iparapheur:showAsAction="never"/>

            <item
                android:id="@+id/action_mail"
                android:title="@string/action_mail"
                iparapheur:showAsAction="never"/>

            <item
                android:id="@+id/action_enregistrer"
                android:title="@string/action_enregistrer"
                iparapheur:showAsAction="never"/>

            <item
                android:id="@+id/action_supprimer"
                android:title="@string/action_supprimer"
                iparapheur:showAsAction="never"/>

            <item
                android:id="@+id/action_journal"
                android:title="@string/action_journal"
                iparapheur:showAsAction="never"/>
        </group>
    </group>
</menu>