<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/dossiers_menu_actions" >
        <item android:id="@+id/action_filtrer"
            android:title="@string/action_filtrer"
            android:showAsAction="ifRoom" />
        <group android:id="@+id/dossiers_menu_main_actions" >

            <item android:id="@+id/action_visa"
                android:title="@string/action_viser"
                android:icon="@android:drawable/ic_menu_send"
                android:showAsAction="ifRoom" />

            <item android:id="@+id/action_signature"
                android:title="@string/action_signer"
                android:icon="@android:drawable/ic_menu_send"
                android:showAsAction="ifRoom" />

            <item android:id="@+id/action_mailsec"
                android:title="@string/action_mailsec"
                android:icon="@android:drawable/ic_menu_send"
                android:showAsAction="ifRoom" />

            <item android:id="@+id/action_tdt"
                android:title="@string/action_tdt"
                android:icon="@android:drawable/ic_menu_send"
                android:showAsAction="ifRoom" />

            <item android:id="@+id/action_archivage"
                android:title="@string/action_archiver"
                android:icon="@android:drawable/ic_menu_send"
                android:showAsAction="ifRoom" />

            <item android:id="@+id/action_rejet"
                android:title="@string/action_rejeter"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:showAsAction="ifRoom" />
        </group>
        <group android:id="@+id/dossiers_menu_other_actions" >

            <item android:id="@+id/action_avis"
                android:title="@string/action_avis"
                android:showAsAction="never" />

            <item android:id="@+id/action_transfert_signature"
                android:title="@string/action_transfertsign"
                android:showAsAction="never" />

            <item android:id="@+id/action_ajout_signature"
                android:title="@string/action_ajoutsign"
                android:showAsAction="never" />

            <item android:id="@+id/action_mail"
                android:title="@string/action_mail"
                android:showAsAction="never" />

            <item android:id="@+id/action_enregistrer"
                android:title="@string/action_enregistrer"
                android:showAsAction="never" />
        </group>
    </group>
</menu>