<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <ViewSwitcher
        android:id="@+id/menu_fragment_viewswitcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/menu_fragment_bureaux_swiperefreshlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:id="@+id/menu_fragment_bureaux_listview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:choiceMode="singleChoice"
                    android:divider="@color/text_black_divider"
                    android:dividerHeight="1dp" />

                <LinearLayout
                    android:id="@+id/menu_fragment_bureaux_empty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:contentDescription="@string/no_content"
                        android:src="@drawable/ic_action_dock" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginTop="16dp"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/no_bureaux"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="bold" />
                </LinearLayout>

            </FrameLayout>
        </android.support.v4.widget.SwipeRefreshLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/menu_fragment_dossiers_swiperefreshlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:id="@+id/menu_fragment_dossier_listview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:choiceMode="singleChoice"
                    android:divider="@color/text_black_divider"
                    android:dividerHeight="1dp" />

                <LinearLayout
                    android:id="@+id/menu_fragment_dossier_empty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:contentDescription="@string/no_content"
                        android:src="@drawable/ic_action_collection" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginTop="16dp"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/no_dossiers"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/menu_fragment_dossier_empty_filter_alert_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        android:gravity="center_horizontal"
                        android:text="@string/no_dossiers_filter_alert"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="bold" />
                </LinearLayout>
            </FrameLayout>

        </android.support.v4.widget.SwipeRefreshLayout>

    </ViewSwitcher>

</FrameLayout>
